--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
     "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "^2.6.0"
   },
