--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "proxy-server": "node server/server.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "leaflet": "^1.9.4",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
