--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,15 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/server/server.js"
+        "src": "/api/(.*)", 
+        "dest": "/server/server.js" 
+      },
+      {
+        "handle": "filesystem"
+      },
+      {
+        "src": "(.*)",
+        "dest": "/"
       }
     ]
   }
